--- a/.gitmodules
+++ b/.gitmodules
@@ -11,8 +11,8 @@
   branch = develop
 [submodule "sorc/oops"]
   path = sorc/oops
-  url = https://github.com/jcsda/oops.git
-  branch = develop
+  url = https://github.com/jcsda-internal/oops.git
+  branch = feature/letkf-stateset
 [submodule "sorc/vader"]
   path = sorc/vader
   url = https://github.com/jcsda/vader.git
@@ -43,8 +43,8 @@
   branch = develop
 [submodule "sorc/fv3-jedi"]
   path = sorc/fv3-jedi
-  url = https://github.com/jcsda/fv3-jedi.git
-  branch = develop
+  url = https://github.com/jcsda-internal/fv3-jedi.git
+  branch = feature/letkf-stateset
 [submodule "sorc/icepack"]
   path = sorc/icepack
   url = https://github.com/JCSDA-internal/Icepack.git
