--- a/.gitmodules
+++ b/.gitmodules
@@ -67,8 +67,10 @@
   branch = develop
 [submodule "sorc/crtm"]
   path = sorc/crtm
-  url = https://github.com/jcsda/crtm.git
-  branch = release/crtm_jedi_v2.4.1
+# url = https://github.com/jcsda/crtm.git
+# branch = release/crtm_jedi_v2.4.1
+  url = https://github.com/JCSDA/CRTMv3.git
+  branch = v3.1.0-skylabv7
 [submodule "sorc/jcb"]
   path = sorc/jcb
   url = https://github.com/noaa-emc/jcb.git
