--- a/.gitmodules
+++ b/.gitmodules
@@ -7,12 +7,12 @@
   branch = develop
 [submodule "sorc/gsw"]
   path = sorc/gsw
-  url = https://github.com/jcsda-internal/GSW-Fortran.git
+  url = https://github.com/jcsda/GSW-Fortran.git
   branch = develop
 [submodule "sorc/oops"]
   path = sorc/oops
-  url = https://github.com/jcsda-internal/oops.git
-  branch = feature/letkf-stateset
+  url = https://github.com/jcsda/oops.git
+  branch = develop
 [submodule "sorc/vader"]
   path = sorc/vader
   url = https://github.com/jcsda/vader.git
@@ -43,19 +43,19 @@
   branch = develop
 [submodule "sorc/fv3-jedi"]
   path = sorc/fv3-jedi
-  url = https://github.com/jcsda-internal/fv3-jedi.git
-  branch = feature/letkf-stateset
+  url = https://github.com/jcsda/fv3-jedi.git
+  branch = develop
 [submodule "sorc/icepack"]
   path = sorc/icepack
-  url = https://github.com/JCSDA-internal/Icepack.git
+  url = https://github.com/JCSDA/Icepack.git
   branch = feature/ecbuild-new
 [submodule "sorc/soca"]
   path = sorc/soca
-  url = https://github.com/jcsda-internal/soca.git
+  url = https://github.com/jcsda/soca.git
   branch = develop
 [submodule "sorc/iodaconv"]
   path = sorc/iodaconv
-  url = https://github.com/JCSDA-internal/ioda-converters.git
+  url = https://github.com/JCSDA/ioda-converters.git
   branch = develop
 [submodule "sorc/land-imsproc"]
   path = sorc/land-imsproc
